fixed notebooks for use in seminar/colab

--- a/examples/CustomerSegmentation/vehicle-insurance-eda-and-boosting-models.ipynb
+++ b/examples/CustomerSegmentation/vehicle-insurance-eda-and-boosting-models.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"+3\" color='#053c96'><b> Problem Statement</b></font>"
+    "<font size=\"+3\" color='#053c96'><b> Problem Statement</b></font>\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/examples/CustomerSegmentation/vehicle-insurance-eda-and-boosting-models.ipynb) [![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/examples/CustomerSegmentation/vehicle-insurance-eda-and-boosting-models.ipynb)"
    ]
   },
   {
@@ -94,8 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train=pd.read_csv('./train.csv', nrows = 100000)\n",
-    "test=pd.read_csv('./test.csv')"
+    "train=pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/examples/CustomerSegmentation/train.csv', nrows = 10000)\n",
+    "test=pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/examples/CustomerSegmentation/./test.csv')"
    ]
   },
   {
@@ -753,12 +755,12 @@
     "y_score = model.predict_proba(x_test)[:,1]\n",
     "fpr, tpr, _ = roc_curve(y_test, y_score)\n",
     "\n",
-    "title('Random Forest ROC curve: CC Fraud')\n",
-    "xlabel('FPR (Precision)')\n",
-    "ylabel('TPR (Recall)')\n",
+    "plt.title('Random Forest ROC curve: CC Fraud')\n",
+    "plt.xlabel('FPR (Precision)')\n",
+    "plt.ylabel('TPR (Recall)')\n",
     "\n",
-    "plot(fpr,tpr)\n",
-    "plot((0,1), ls='dashed',color='black')\n",
+    "plt.plot(fpr,tpr)\n",
+    "plt.plot((0,1), ls='dashed',color='black')\n",
     "plt.show()\n",
     "print ('Area under curve (AUC): ', auc(fpr,tpr))"
    ]
@@ -786,8 +788,8 @@
    "outputs": [],
    "source": [
     "for column in cat_feat:\n",
-    "    x_train[column] = x_train[column].astype('int')\n",
-    "    x_test[column] = x_test[column].astype('int')"
+    "    x_train[column] = x_train[column].astype('float').astype('int')\n",
+    "    x_test[column] = x_test[column].astype('float').astype('int')"
    ]
   },
   {
@@ -822,8 +824,8 @@
     "    evaluation = [( x_train, y_train), ( x_test, y_test)]\n",
     "    \n",
     "    clf.fit(x_train, y_train,\n",
-    "            eval_set=evaluation, eval_metric=\"auc\",\n",
-    "            early_stopping_rounds=10,verbose=False)\n",
+    "            eval_set=evaluation, \n",
+    "            verbose=False)\n",
     "    \n",
     "\n",
     "    pred = clf.predict(x_test)\n",
@@ -885,7 +887,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb_model=xgb.XGBClassifier(n_estimators = space['n_estimators'], max_depth = best, gamma = 4.0388607178326605, reg_lambda = 0.26955899476862166,\n",
+    "xgb_model=xgb.XGBClassifier(n_estimators = space['n_estimators'], max_depth = 4, gamma = 4.0388607178326605, reg_lambda = 0.26955899476862166,\n",
     "                            reg_alpha = 66.0, min_child_weight=4.0,colsample_bytree = 0.8844758548525424 )\n",
     "    "
    ]
@@ -925,193 +927,14 @@
     "y_score = xgb_model.predict_proba(x_test)[:,1]\n",
     "fpr, tpr, _ = roc_curve(y_test, y_score)\n",
     "\n",
-    "title('XGBoost ROC curve')\n",
-    "xlabel('FPR (Precision)')\n",
-    "ylabel('TPR (Recall)')\n",
+    "plt.title('XGBoost ROC curve')\n",
+    "plt.xlabel('FPR (Precision)')\n",
+    "plt.ylabel('TPR (Recall)')\n",
     "\n",
-    "plot(fpr,tpr)\n",
-    "plot((0,1), ls='dashed',color='black')\n",
+    "plt.plot(fpr,tpr)\n",
+    "plt.plot((0,1), ls='dashed',color='black')\n",
     "plt.show()\n",
     "print ('Area under curve (AUC): ', auc(fpr,tpr))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random_state=42\n",
-    "n_iter=50\n",
-    "num_folds=2\n",
-    "kf = KFold(n_splits=num_folds, random_state=random_state,shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gb_mse_cv(params, random_state=random_state, cv=kf, X=x_train, y=y_train):\n",
-    "    # the function gets a set of variable parameters in \"param\"\n",
-    "    params = {'n_estimators': int(params['n_estimators']), \n",
-    "              'max_depth': int(params['max_depth']), \n",
-    "              'learning_rate': params['learning_rate'],\n",
-    "              'gamma': params['gamma'],\n",
-    "              'reg_alpha' : params['reg_alpha'],\n",
-    "              'reg_lambda' : params['reg_lambda'],\n",
-    "              'colsample_bytree' : params['colsample_bytree'],\n",
-    "              'min_child_weight' : params['min_child_weight']\n",
-    "             }\n",
-    "            \n",
-    "            \n",
-    "    \n",
-    "    # we use this params to create a new LGBM Regressor\n",
-    "    model = lgb.LGBMClassifier(random_state=42, **params)\n",
-    "    \n",
-    "    # and then conduct the cross validation with the same folds as before\n",
-    "    score = -cross_val_score(model, X, y, cv=cv, scoring=\"roc_auc\", n_jobs=-1).mean()\n",
-    "\n",
-    "    return score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "_kg_hide-output": true
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "# possible values of parameters\n",
-    "space={'n_estimators': hp.quniform('n_estimators', 100, 200, 1),\n",
-    "       'max_depth' : hp.quniform('max_depth', 2, 8, 1),\n",
-    "       'learning_rate': hp.loguniform(\"learning_rate\",-4,-1),\n",
-    "        'gamma': hp.quniform('gamma',0.1,0.5,0.1),\n",
-    "        'reg_alpha' : hp.quniform('reg_alpha',1.1,1.5,0.1),\n",
-    "        'reg_lambda' : hp.uniform('reg_lambda',1.1,1.5),\n",
-    "        'colsample_bytree' : hp.uniform('colsample_bytree', 0.1,0.5),\n",
-    "        'min_child_weight' : hp.quniform('min_child_weight', 0, 10, 1),\n",
-    "      }\n",
-    "\n",
-    "# trials will contain logging information\n",
-    "trials = Trials()\n",
-    "\n",
-    "best=fmin(fn=gb_mse_cv, # function to optimize\n",
-    "          space=space, \n",
-    "          algo=tpe.suggest, # optimization algorithm, hyperotp will select its parameters automatically\n",
-    "          max_evals=n_iter, # maximum number of iterations\n",
-    "          trials=trials, # logging\n",
-    "          rstate=np.random.RandomState(random_state) # fixing random state for the reproducibility\n",
-    "         )\n",
-    "\n",
-    "# computing the score on the test set\n",
-    "model = lgb.LGBMClassifier(random_state=random_state, n_estimators=int(best['n_estimators']),\n",
-    "                           max_depth=int(best['max_depth']),learning_rate=best['learning_rate'],gamma=best['gamma'],\n",
-    "                           reg_alpha=best['reg_alpha'],reg_lambda=best['reg_lambda'],colsample_bytree=best['colsample_bytree'],\n",
-    "                           min_child_weight=best['min_child_weight'])\n",
-    "model.fit(x_train,y_train)\n",
-    "\n",
-    "preds = [pred[1] for pred in model.predict_proba(x_test)]\n",
-    "score = roc_auc_score(y_test, preds, average = 'weighted')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"auc-roc score on Test data\",score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_score = model.predict_proba(x_test)[:,1]\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_score)\n",
-    "\n",
-    "title('LGBM ROC curve')\n",
-    "xlabel('FPR (Precision)')\n",
-    "ylabel('TPR (Recall)')\n",
-    "\n",
-    "plot(fpr,tpr)\n",
-    "plot((0,1), ls='dashed',color='black')\n",
-    "plt.show()\n",
-    "print ('Area under curve (AUC): ', auc(fpr,tpr))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Evaluating on Test data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## LGBM "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "_kg_hide-output": true
-   },
-   "outputs": [],
-   "source": [
-    "id=test.id\n",
-    "#test.drop(['id'],axis=1,inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test['Gender'] = test['Gender'].map( {'Female': 0, 'Male': 1} ).astype(int)\n",
-    "test=pd.get_dummies(test,drop_first=True)\n",
-    "test=test.rename(columns={\"Vehicle_Age_< 1 Year\": \"Vehicle_Age_lt_1_Year\", \"Vehicle_Age_> 2 Years\": \"Vehicle_Age_gt_2_Years\"})\n",
-    "test=test.rename(columns={\"Vehicle_Age_< 1 Year\": \"Vehicle_Age_lt_1_Year\", \"Vehicle_Age_> 2 Years\": \"Vehicle_Age_gt_2_Years\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Preds = [pred[1] for pred in model.predict_proba(test)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "submission = pd.DataFrame(data = {'id': id, 'Response': Preds})\n",
-    "submission.to_csv('vehicle_insurance.csv', index = False)\n",
-    "submission.head()"
    ]
   },
   {
@@ -1139,7 +962,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1153,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
