small correction in text

--- a/01b_python_basics.ipynb
+++ b/01b_python_basics.ipynb
@@ -403,9 +403,9 @@
    "source": [
     "# Funktionale Programmierung\n",
     "\n",
-    "Funktionale Programmierung ist ein Paradigma, das sich auf das Berechnen von Werten mithilfe von Funktionen konzentriert. In Python gibt es viele eingebaute Funktionen und Konzepte, die sich gut für die funktionale Programmierung eignen, wie map(), filter(), reduce(), List Comprehensions, und Generatoren.\n",
+    "Funktionale Programmierung ist ein Paradigma, das sich auf das Berechnen von Werten mithilfe von Funktionen konzentriert. In Python gibt es viele eingebaute Funktionen und Konzepte, die sich gut für die funktionale Programmierung eignen, wie map(), filter(), reduce(), List Comprehensions (kommt noch), und Generatoren (behandeln wir nicht).\n",
     "\n",
-    "Wir werden uns anonyme Funktionen (sogenannte Lambda-Funktionen), List Comprehensions (kennen wir schon) und Generatoren anschauen."
+    "Jetzt schauen wir uns anonyme Funktionen (sogenannte Lambda-Funktionen) an. "
    ]
   },
   {
