added missings words

--- a/03_python_pandas.ipynb
+++ b/03_python_pandas.ipynb
@@ -762,9 +762,9 @@
    "source": [
     "# Dateien von nicht lokalen Quellen einlesen\n",
     "\n",
-    "Man kann mit `pandas`aus sehr einfach Datenquellen einlesen, die nicht lokal sondern \"irgendwo\" im Internet, bzw. auf einem Server liegen. Man dazu nur die URL zum Speicherort der Datei angeben. \n",
+    "Man kann mit `pandas`aus sehr einfach Datenquellen einlesen, die nicht lokal sondern \"irgendwo\" im Internet, bzw. auf einem Server liegen. Man muss dazu lediglich die URL zum Speicherort der Datei angeben. \n",
     "\n",
-    "Beispielsweise können wir so die Dateien im github-Repository einlesen:"
+    "Beispielsweise können wir so die Dateien aus einem github-Repository einlesen:"
    ]
   },
   {
@@ -773,6 +773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Vorsicht beim Link, der Verweis auf raw ist wichtig\n",
     "data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/weather_data.csv')\n",
     "data.head()"
    ]
